# Acute

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  vcpkg.json
documentation/: ARCHITECTURE.md  FEATURES.md  FILETREE.md
examples/: brush_presets.cpp
include/: Application.h  BrushDab.h  BrushEngine.h  BrushMapping.h  Canvas.h  InputManager.h  InputTypes.h  Renderer.h  Shader.h  Window.h  WindowsInkInput.h
src/: Application.cpp  BrushEngine.cpp  Canvas.cpp  InputManager.cpp  Renderer.cpp  Shader.cpp  Window.cpp  WindowsInkInput.cpp  main.cpp
